<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_quran"
        android:icon="@drawable/reading"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_sebha"
        android:icon="@drawable/sebha"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_ahades"
        android:icon="@drawable/hadith_ic"
        android:title="@string/Ahadith" />

    <item
        android:id="@+id/navigation_radio"
        android:icon="@drawable/ic_radio"
        android:title="@string/Radio" />

    <item
        android:id="@+id/navigation_audio"
        android:icon="@drawable/ic_audio"
        android:title="@string/audio" />



</menu>
